# Tilt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  build.py  build.sh  build_config.json  configure.sh
.github/workflows/: linuxbuild.yml
content/: autoexec
content/engine/base/shaders/: deferred_lighting.glsl
dependencies/imgui/backends/: imgui_impl_opengl3.h
projects/engine/: CMakeLists.txt
projects/engine/src/: main.cpp
projects/engine/src/engine/: engine.cpp
projects/engine/src/rendering/: renderer.cpp
projects/engine/src/rendering/opengl/: ri_opengl4.cpp
projects/engine_data/: autoexec
projects/engine_data/engine/base/shaders/: skybox.glsl  standard.glsl
scripts/: ValidateEngineShaders.sh  ValidateShader.sh
